--- a/cc.ipynb
+++ b/cc.ipynb
@@ -9,7 +9,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n"
    ]
   },
   {
