variable name changes

--- a/cc.ipynb
+++ b/cc.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n"
+    "%matplotlib inline\n",
+    "import seaborn as sns\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -205,19 +206,19 @@
        "4    678.33            244.79              0.00    12.0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv('credit_card.csv')\n",
-    "data.head()"
+    "cc_data = pd.read_csv('credit_card.csv')\n",
+    "cc_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -226,18 +227,18 @@
        "0.02"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.MINIMUM_PAYMENTS.min()"
+    "cc_data.MINIMUM_PAYMENTS.min()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -264,36 +265,36 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.isna().sum()"
+    "cc_data.isna().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# payments = 0 and MINIMUM_PAYMENTS = NaN, assign MINIMUM_PAYMENTS to 0, else assign to nan\n",
     "# drop the row where CREDIT_LIMIT is missing\n",
-    "values = data[(data['PAYMENTS']==0)]['MINIMUM_PAYMENTS'].isna().map({False: np.nan, True: 0})\n",
-    "data['MINIMUM_PAYMENTS'] = data['MINIMUM_PAYMENTS'].fillna(values)\n",
-    "data = data.dropna(subset=['CREDIT_LIMIT'])"
+    "values = cc_data[(cc_data['PAYMENTS']==0)]['MINIMUM_PAYMENTS'].isna().map({False: np.nan, True: 0})\n",
+    "cc_data['MINIMUM_PAYMENTS'] = cc_data['MINIMUM_PAYMENTS'].fillna(values)\n",
+    "cc_data = cc_data.dropna(subset=['CREDIT_LIMIT'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# assign all other null value in MINIMUM_PAYMENTS as average value in the column\n",
-    "data['MINIMUM_PAYMENTS'].fillna(data['MINIMUM_PAYMENTS'].mean(),inplace=True)"
+    "cc_data['MINIMUM_PAYMENTS'].fillna(cc_data['MINIMUM_PAYMENTS'].mean(),inplace=True)"
    ]
   },
   {
@@ -313,8 +314,15 @@
     }
    ],
    "source": [
-    "data.isna().sum().sum()"
+    "cc_data.isna().sum().sum()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
