--- a/cc.ipynb
+++ b/cc.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,12 +22,13 @@
     "from sklearn.cluster import KMeans\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "from scipy.cluster.vq import whiten"
+    "from scipy.cluster.vq import whiten,vq,kmeans\n",
+    "import seaborn as sns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +219,7 @@
        "4    678.33            244.79              0.00    12.0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,16 +232,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x12bb6e310>"
+       "<matplotlib.collections.PathCollection at 0x12ed8b4c0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -263,16 +264,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x12b7dde20>"
+       "<matplotlib.collections.PathCollection at 0x12ed8b3a0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -295,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +323,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +729,7 @@
        "max    50721.480000      76406.210000          1.000000    12.000000  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1010,7 @@
        "max      17.520334         32.725665          3.417001     8.974921  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1034,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1100,10 +1101,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "centroids,_ = kmeans(scaled_X, 4)\n",
+    "scaled_X['cluster_labels'], _ = vq(scaled_X, centroids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cluster_labels     0     1    2     3\n",
+      "cluster_labels                       \n",
+      "0               2955     0    0     0\n",
+      "1                  0  1138    0     0\n",
+      "2                  0     0  811     0\n",
+      "3                  0     0    0  4045\n"
+     ]
+    }
+   ],
+   "source": [
+    "cross_tab = pd.crosstab(scaled_X['cluster_labels'],scaled_X['cluster_labels'])\n",
+    "print(cross_tab)"
+   ]
   }
  ],
  "metadata": {
