--- a/cc.ipynb
+++ b/cc.ipynb
@@ -1737,412 +1737,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 348,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>BALANCE</th>\n",
-       "      <th>BALANCE_FREQUENCY</th>\n",
-       "      <th>PURCHASES</th>\n",
-       "      <th>ONEOFF_PURCHASES</th>\n",
-       "      <th>INSTALLMENTS_PURCHASES</th>\n",
-       "      <th>CASH_ADVANCE</th>\n",
-       "      <th>PURCHASES_FREQUENCY</th>\n",
-       "      <th>ONEOFF_PURCHASES_FREQUENCY</th>\n",
-       "      <th>PURCHASES_INSTALLMENTS_FREQUENCY</th>\n",
-       "      <th>CASH_ADVANCE_FREQUENCY</th>\n",
-       "      <th>...</th>\n",
-       "      <th>PAYMENTS</th>\n",
-       "      <th>MINIMUM_PAYMENTS</th>\n",
-       "      <th>TENURE</th>\n",
-       "      <th>ONEOFFPURCHASES_TOTAL</th>\n",
-       "      <th>CREDIT_USED</th>\n",
-       "      <th>PCT_PAID</th>\n",
-       "      <th>PAID_FULL</th>\n",
-       "      <th>OVER_LIMIT</th>\n",
-       "      <th>PAID_FULL</th>\n",
-       "      <th>OVER_LIMIT</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>40.90</td>\n",
-       "      <td>0.82</td>\n",
-       "      <td>95.40</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>95.40</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.17</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.08</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>...</td>\n",
-       "      <td>201.80</td>\n",
-       "      <td>139.51</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>95.40</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3202.47</td>\n",
-       "      <td>0.91</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>6442.95</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4103.03</td>\n",
-       "      <td>1072.34</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>6442.95</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2495.15</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>773.17</td>\n",
-       "      <td>773.17</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>...</td>\n",
-       "      <td>622.07</td>\n",
-       "      <td>627.28</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>773.17</td>\n",
-       "      <td>773.17</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1666.67</td>\n",
-       "      <td>0.64</td>\n",
-       "      <td>1499.00</td>\n",
-       "      <td>1499.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>205.79</td>\n",
-       "      <td>0.08</td>\n",
-       "      <td>0.08</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.08</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>1499.00</td>\n",
-       "      <td>1704.79</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>817.71</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>16.00</td>\n",
-       "      <td>16.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.08</td>\n",
-       "      <td>0.08</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>...</td>\n",
-       "      <td>678.33</td>\n",
-       "      <td>244.79</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>16.00</td>\n",
-       "      <td>16.00</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8945</th>\n",
-       "      <td>28.49</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>291.12</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>291.12</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.83</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>...</td>\n",
-       "      <td>325.59</td>\n",
-       "      <td>48.89</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>291.12</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8946</th>\n",
-       "      <td>19.18</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>300.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>300.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.83</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>...</td>\n",
-       "      <td>275.86</td>\n",
-       "      <td>294.60</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>300.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8947</th>\n",
-       "      <td>23.40</td>\n",
-       "      <td>0.83</td>\n",
-       "      <td>144.40</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>144.40</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.83</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.67</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>...</td>\n",
-       "      <td>81.27</td>\n",
-       "      <td>82.42</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>144.40</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8948</th>\n",
-       "      <td>13.46</td>\n",
-       "      <td>0.83</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>36.56</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.17</td>\n",
-       "      <td>...</td>\n",
-       "      <td>52.55</td>\n",
-       "      <td>55.76</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>36.56</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8949</th>\n",
-       "      <td>372.71</td>\n",
-       "      <td>0.67</td>\n",
-       "      <td>1093.25</td>\n",
-       "      <td>1093.25</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>127.04</td>\n",
-       "      <td>0.67</td>\n",
-       "      <td>0.67</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.33</td>\n",
-       "      <td>...</td>\n",
-       "      <td>63.17</td>\n",
-       "      <td>88.29</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>1093.25</td>\n",
-       "      <td>1220.29</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>8950 rows × 23 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      BALANCE  BALANCE_FREQUENCY  PURCHASES  ONEOFF_PURCHASES  \\\n",
-       "0       40.90               0.82      95.40              0.00   \n",
-       "1     3202.47               0.91       0.00              0.00   \n",
-       "2     2495.15               1.00     773.17            773.17   \n",
-       "3     1666.67               0.64    1499.00           1499.00   \n",
-       "4      817.71               1.00      16.00             16.00   \n",
-       "...       ...                ...        ...               ...   \n",
-       "8945    28.49               1.00     291.12              0.00   \n",
-       "8946    19.18               1.00     300.00              0.00   \n",
-       "8947    23.40               0.83     144.40              0.00   \n",
-       "8948    13.46               0.83       0.00              0.00   \n",
-       "8949   372.71               0.67    1093.25           1093.25   \n",
-       "\n",
-       "      INSTALLMENTS_PURCHASES  CASH_ADVANCE  PURCHASES_FREQUENCY  \\\n",
-       "0                      95.40          0.00                 0.17   \n",
-       "1                       0.00       6442.95                 0.00   \n",
-       "2                       0.00          0.00                 1.00   \n",
-       "3                       0.00        205.79                 0.08   \n",
-       "4                       0.00          0.00                 0.08   \n",
-       "...                      ...           ...                  ...   \n",
-       "8945                  291.12          0.00                 1.00   \n",
-       "8946                  300.00          0.00                 1.00   \n",
-       "8947                  144.40          0.00                 0.83   \n",
-       "8948                    0.00         36.56                 0.00   \n",
-       "8949                    0.00        127.04                 0.67   \n",
-       "\n",
-       "      ONEOFF_PURCHASES_FREQUENCY  PURCHASES_INSTALLMENTS_FREQUENCY  \\\n",
-       "0                           0.00                              0.08   \n",
-       "1                           0.00                              0.00   \n",
-       "2                           1.00                              0.00   \n",
-       "3                           0.08                              0.00   \n",
-       "4                           0.08                              0.00   \n",
-       "...                          ...                               ...   \n",
-       "8945                        0.00                              0.83   \n",
-       "8946                        0.00                              0.83   \n",
-       "8947                        0.00                              0.67   \n",
-       "8948                        0.00                              0.00   \n",
-       "8949                        0.67                              0.00   \n",
-       "\n",
-       "      CASH_ADVANCE_FREQUENCY  ...  PAYMENTS  MINIMUM_PAYMENTS  TENURE  \\\n",
-       "0                       0.00  ...    201.80            139.51    12.0   \n",
-       "1                       0.25  ...   4103.03           1072.34    12.0   \n",
-       "2                       0.00  ...    622.07            627.28    12.0   \n",
-       "3                       0.08  ...      0.00              0.00    12.0   \n",
-       "4                       0.00  ...    678.33            244.79    12.0   \n",
-       "...                      ...  ...       ...               ...     ...   \n",
-       "8945                    0.00  ...    325.59             48.89     6.0   \n",
-       "8946                    0.00  ...    275.86            294.60     6.0   \n",
-       "8947                    0.00  ...     81.27             82.42     6.0   \n",
-       "8948                    0.17  ...     52.55             55.76     6.0   \n",
-       "8949                    0.33  ...     63.17             88.29     6.0   \n",
-       "\n",
-       "      ONEOFFPURCHASES_TOTAL  CREDIT_USED  PCT_PAID  PAID_FULL OVER_LIMIT  \\\n",
-       "0                      0.00        95.40       2.0       True      False   \n",
-       "1                      0.00      6442.95       0.0      False      False   \n",
-       "2                    773.17       773.17       0.0      False      False   \n",
-       "3                   1499.00      1704.79       0.0      False      False   \n",
-       "4                     16.00        16.00      42.0       True      False   \n",
-       "...                     ...          ...       ...        ...        ...   \n",
-       "8945                   0.00       291.12       1.0       True      False   \n",
-       "8946                   0.00       300.00       0.0      False      False   \n",
-       "8947                   0.00       144.40       0.0      False      False   \n",
-       "8948                   0.00        36.56       1.0       True      False   \n",
-       "8949                1093.25      1220.29       0.0      False      False   \n",
-       "\n",
-       "      PAID_FULL OVER_LIMIT  \n",
-       "0          True      False  \n",
-       "1         False      False  \n",
-       "2         False      False  \n",
-       "3         False      False  \n",
-       "4          True      False  \n",
-       "...         ...        ...  \n",
-       "8945       True      False  \n",
-       "8946      False      False  \n",
-       "8947      False      False  \n",
-       "8948       True      False  \n",
-       "8949      False      False  \n",
-       "\n",
-       "[8950 rows x 23 columns]"
-      ]
-     },
-     "execution_count": 346,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "new_data"
+    "new_data = new_data.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 350,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_data.to_csv('new_data.csv')"
    ]
   },
   {
