--- a/MBAN6400_Project_B.ipynb
+++ b/MBAN6400_Project_B.ipynb
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "# drop discrete variables\n",
-    "data1 = pd.read_csv('new_data.csv')\n",
+    "data1 = pd.read_csv('/Users/xingkaiwu/Desktop/MBAN-6400-Project/Data/new_data.csv')\n",
     "data = data1.drop(columns = ['Unnamed: 0','PAID_FULL', 'TENURE_6.0', 'TENURE_7.0', 'TENURE_8.0', 'TENURE_9.0',\n",
     "       'TENURE_10.0', 'TENURE_11.0', 'TENURE_12.0'])"
    ]
